# LangChain

./: .env  Intro.ipynb  luffy.text  pyproject.toml  requirements.txt
1.0) LC_Basics/: test.py
1.0) LC_Basics/Functions/: helper_LC.py
1.0) LC_Basics/Prompts/: prompt_LC.py
1.5) PDF Summarizer/: app.py
1.5) PDF Summarizer/Functions/: Summary.py
1.5) PDF Summarizer/helper/: _reader.py
1.5) PDF Summarizer/templates/: index.html
2.0) semantic_search_engine/: main.ipynb
2.0) semantic_search_engine/chroma_langchain_db/: chroma.sqlite3
Intro/: less_dog.txt
LC_Basics/: README.md  app.py  helper_LC.py  main.py  prompt_LC.py  pyproject.toml
LC_Basics/Functions/: helper_LC.py
LC_Basics/frontend/: index.html
LC_Basics/typeModels/: models.py
PDF Summarizer/: requirements.txt  test.ipynb
PDF Summarizer/helper/: _api_calls.py  _prompt.py
semantic_search_engine/: app.py  main.ipynb
