[project]
name = "Lang_venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain-community>=0.3.20",
    "langchain[openai]>=0.3.22",
    "langsmith>=0.3.23",
    "pypdf>=5.4.0",
]
